--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ flask = "3.1.1"
 flask-socketio = "5.5.1"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^25.1.0"
+flake8 = "^7.3.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
