--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,14 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.12"
-flask = "3.1.1"
+python = "^3.14"
+flask = "^3.1.2"
 flask-socketio = "5.5.1"
+python-dotenv = "^1.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
-black = "^25.1.0"
+black = "^25.12.0"
 flake8 = "^7.3.0"
 
 [build-system]
