--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
 
-  code-quality:
+  code-quality-flake8:
 
     defaults:
       run:
@@ -12,7 +12,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    name: flake8 Lint
+    name: Flake8
 
     steps:
       - name: Check out source repository
@@ -23,6 +23,17 @@ jobs:
           python-version: "3.13"
       - name: flake8 Lint
         uses: py-actions/flake8@v2
+
+  code-quality-black-fmt:
+    runs-on: ubuntu-latest
+    name: Black Formatting Check
+    steps:
+      - name: Check out source repository
+        uses: actions/checkout@v4
+      - name: Set up Python environment
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
       - name: black formatting check
         uses: psf/black@stable
         with:
@@ -31,7 +42,7 @@ jobs:
   security-scan:
     runs-on: ubuntu-latest
     name: Trivy Filesystem Scan
-    needs: code-quality
+    needs: [code-quality-flake8, code-quality-black-fmt]
     steps:
       - name: Check out source repository
         uses: actions/checkout@v4
