--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.2.1"
 [tool.poetry.group.dev.dependencies]
 black = "^25.12.0"
 flake8 = "^7.3.0"
+pylint = "^4.0.4"
 
 [build-system]
 requires = ["poetry-core"]
