--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,16 +49,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.14"
-      - name: Install pylint
-        run: |
-          python -m pip install --upgrade pip
-          pip install pylint
       - name: Install pyproject.toml dependencies
         run: |
           if [ -f "pyproject.toml" ]; then pip install poetry && poetry install; fi
       - name: Analysing the code with pylint
         run: |
-          pylint $(git ls-files '*.py')
+          poetry run pylint $(git ls-files '*.py')
 
   security-scan:
     runs-on: ubuntu-latest
