--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -88,10 +88,10 @@ jobs:
       uses: actions/checkout@v6
 
     - name: Login to Docker Hub
-      uses: docker/login-action@v3
+      uses: docker/login-action@v3.6.0
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Docker Build - Flask-Chat
       id: build-image
@@ -107,9 +107,8 @@ jobs:
         ignore-unfixed: true
         vuln-type: 'os,library'
         severity: 'CRITICAL,HIGH'
-        trivyignores: '.trivyignore'
 
     - name: Docker Push - Flask-Chat
-      id: push-solr
+      id: push-flask-chat
       run: |
         docker image push docker.io/${{ secrets.DOCKERHUB_USERNAME }}/flask-chat:latest
